# secom-yield-monitoring

./: .gitignore  README.md  pyproject.toml
docs/: final_end_to_end_report_strategy_merged.md  improvement_plan.md
docs/report_strategy/: agreed_all_selector_multiseed_changes.md  claude_challenge_to_final_codex_docs.md  claude_fifth_strategy_review.md  claude_final_strategy_review.md  claude_fourth_strategy_review.md  claude_second_strategy_review.md  claude_seventh_strategy_review.md  claude_sixth_strategy_review.md  claude_third_strategy_review.md  codex_analysis_of_claude_challenge.md  codex_assessment.md  codex_challenge_to_final_strategy_response.md  codex_challenge_to_strategy_critique.md  end_to_end_report_strategy.md  final_end_to_end_report_strategy.md  final_strategy_response.md  pre_implementation_challenge.md  strategy_critique.md  validation_playbook.md
docs/report_strategy/runbooks/: README.md  (+5 more)
learning/: gram_schmidt_demo.py  l1_vs_elasticnet_demo.py  missing_indicator_demo.py  pearson_demo.py  relieff_demo.py  s2n_vs_t_demo.py  stability_demo.py  t_vs_f_demo.py
notebooks/: 01_eda time_cv.ipynb  01_eda_random_cv.ipynb
scripts/: run_01_split.py  run_02_lane_a.py  run_03_lane_b_stage_ab.py  run_04_freeze_lockbox.py  run_05_audit_claims.py
src/secom/: __init__.py  artifacts.py  config.py  cv.py  io.py  metrics.py  models.py  pipeline.py  preprocess.py  qa.py  types.py
tests/: conftest.py  test_artifact_schema_and_claim_gates.py  test_freeze_lockbox_drift_mspc.py  test_lane_a_replication.py  test_split_contract.py  test_stage_b_selection.py
(+15 files in other folders)
